[tool.poetry]
name = "dedup-and-recal"
version = "0.1.0"
description = "Python module for deduplicating assembly contigs (or any sequence) in a FASTA and recalibrating any available depths"
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.5"
pdoc = "^14.1.0"
result = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
